<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SecondFragment">

    <EditText
        android:id="@+id/mName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Name"
        android:backgroundTint="@color/colorAccent"
        android:ems="14"
        android:gravity="center_horizontal"
        android:hint="@string/macNameHint"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        app:layout_constraintBottom_toBottomOf="@id/mIPAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <EditText
        android:id="@+id/mIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Broadcast Address"
        android:backgroundTint="@color/colorAccent"
        android:ems="14"
        android:gravity="center_horizontal"
        android:hint="@string/broadcastAddressHint"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/mMACAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="MAC Address"
        android:backgroundTint="@color/colorAccent"
        android:ems="14"
        android:gravity="center_horizontal"
        android:hint="@string/macAddressHint"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <Button
        android:id="@+id/mAddMAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:text="@string/addMachine"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toEndOf="@+id/mGoBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/mGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:text="@string/goBack"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

</androidx.constraintlayout.widget.ConstraintLayout>